flag m-modes that don't look like the prediction
this is probably way too aggressive for now, but let's stick it out for now to see if it has any
effect

--- a/projects/2017-rainy-day-power-spectrum/generated-config-files/030-getmmodes-interpolated-peeled-night.yml
+++ b/projects/2017-rainy-day-power-spectrum/generated-config-files/030-getmmodes-interpolated-peeled-night.yml
@@ -5,7 +5,9 @@ output: 030-m-modes-interpolated-peeled-night
 metadata: metadata
 hierarchy: hierarchy
 interpolating-visibilities: 032-predicted-visibilities-peeled
+flagging-m-modes: 
 replacement-threshold: 5
+flagging-threshold: 100
 integrations-per-day: 6628
 delete-input: false
 option: night
