--- a/projects/2017-rainy-day-power-spectrum/generated-config-files/030-getmmodes-interpolated-calibrated-all.yml
+++ b/projects/2017-rainy-day-power-spectrum/generated-config-files/030-getmmodes-interpolated-calibrated-all.yml
@@ -5,7 +5,9 @@ output: 030-m-modes-interpolated-calibrated-all
 metadata: metadata
 hierarchy: hierarchy
 interpolating-visibilities: 032-predicted-visibilities-calibrated
+flagging-m-modes: 032-predicted-m-modes-calibrated
 replacement-threshold: 5
+flagging-threshold: 100
 integrations-per-day: 6628
 delete-input: false
 option: all
