--- a/projects/2017-rainy-day-power-spectrum/generated-config-files/030-getmmodes-interpolated-peeled-day.yml
+++ b/projects/2017-rainy-day-power-spectrum/generated-config-files/030-getmmodes-interpolated-peeled-day.yml
@@ -5,7 +5,9 @@ output: 030-m-modes-interpolated-peeled-day
 metadata: metadata
 hierarchy: hierarchy
 interpolating-visibilities: 032-predicted-visibilities-peeled
+flagging-m-modes: 
 replacement-threshold: 5
+flagging-threshold: 100
 integrations-per-day: 6628
 delete-input: false
 option: day
