--- a/projects/2017-rainy-day-power-spectrum/generated-config-files/033-transfer-flags-calibrated.yml
+++ b/projects/2017-rainy-day-power-spectrum/generated-config-files/033-transfer-flags-calibrated.yml
@@ -1,5 +1,5 @@
 # This file was auto-generated. Do not edit directly!
-input-predicted: 032-predicted-m-modes-calibrated
-input-measured: 030-m-modes-calibrated-all
+input-to-flag: 032-predicted-m-modes-calibrated
+input-already-flagged: 030-m-modes-interpolated-calibrated-all
 output: 033-predicted-m-modes-calibrated
 
