screw it, we're using the same flags on every frequency channel
life is too short, and I want to graduate eventually

The problem is that if each frequency channel has its own set of flags, simple frequency
differencing is much more difficult to interpret. For example, compressing the data takes a
complicated linear combination of all the un-flagged data in each channel. If each channel has a
different set of flags, the optimal linear combination is different, and you can no longer directly
compare the channels.

If you're reading this commit message sometime in the distant future, hi! Drop me a line at Google
and feel free to drop some expletives. It's all my fault.

--- a/projects/2017-rainy-day-power-spectrum/generated-config-files/033-transfer-flags-predicted-calibrated.yml
+++ b/projects/2017-rainy-day-power-spectrum/generated-config-files/033-transfer-flags-predicted-calibrated.yml
@@ -2,4 +2,5 @@
 input-to-flag: 032-predicted-m-modes-calibrated
 input-already-flagged: 030-m-modes-interpolated-calibrated-all
 output: 033-predicted-m-modes-calibrated
+same-across-all-frequencies: true
 
