--- a/projects/2017-rainy-day-power-spectrum/generated-config-files/033-transfer-flags-recalibrated-night.yml
+++ b/projects/2017-rainy-day-power-spectrum/generated-config-files/033-transfer-flags-recalibrated-night.yml
@@ -2,4 +2,5 @@
 input-to-flag: 030-m-modes-interpolated-recalibrated-night
 input-already-flagged: 030-m-modes-interpolated-recalibrated-all
 output: 033-m-modes-interpolated-recalibrated-night
+same-across-all-frequencies: true
 
