--- a/projects/2017-rainy-day-power-spectrum/generated-config-files/033-transfer-flags-calibrated-odd.yml
+++ b/projects/2017-rainy-day-power-spectrum/generated-config-files/033-transfer-flags-calibrated-odd.yml
@@ -2,4 +2,5 @@
 input-to-flag: 030-m-modes-interpolated-calibrated-odd
 input-already-flagged: 030-m-modes-interpolated-calibrated-all
 output: 033-m-modes-interpolated-calibrated-odd
+same-across-all-frequencies: true
 
