--- a/projects/2017-rainy-day-power-spectrum/generated-config-files/033-transfer-flags-predicted-peeled.yml
+++ b/projects/2017-rainy-day-power-spectrum/generated-config-files/033-transfer-flags-predicted-peeled.yml
@@ -2,4 +2,5 @@
 input-to-flag: 032-predicted-m-modes-peeled
 input-already-flagged: 030-m-modes-interpolated-peeled-all
 output: 033-predicted-m-modes-peeled
+same-across-all-frequencies: true
 
