--- a/projects/2017-rainy-day-power-spectrum/Makefile
+++ b/projects/2017-rainy-day-power-spectrum/Makefile
@@ -98,17 +98,9 @@ sky-covariance: \
 	.pipeline/110-foreground-covariance-matrix \
 	.pipeline/111-signal-covariance-matrix
 
-.PHONY: filter-predicted
-filter-predicted: \
-	.pipeline/112-foreground-filter-predicted-calibrated-mild \
-	.pipeline/112-foreground-filter-predicted-calibrated-moderate \
-	.pipeline/112-foreground-filter-predicted-calibrated-extreme \
-	.pipeline/112-foreground-filter-predicted-peeled-mild \
-	.pipeline/112-foreground-filter-predicted-peeled-moderate \
-	.pipeline/112-foreground-filter-predicted-peeled-extreme \
-	.pipeline/112-foreground-filter-predicted-recalibrated-mild \
-	.pipeline/112-foreground-filter-predicted-recalibrated-moderate \
-	.pipeline/112-foreground-filter-predicted-recalibrated-extreme
+.PHONY: angular-power-spectrum
+angular-power-spectrum: \
+	.pipeline/123-angular-quadratic-estimator
 
 .PHONY: spherical-power-spectrum
 spherical-power-spectrum: \
