--- a/projects/2017-rainy-day-power-spectrum/generated-config-files/031-tikhonov-channels-calibrated-xx.yml
+++ b/projects/2017-rainy-day-power-spectrum/generated-config-files/031-tikhonov-channels-calibrated-xx.yml
@@ -4,7 +4,7 @@ output-alm: 031-dirty-channel-alm-calibrated-xx
 output-map: 031-dirty-channel-map-calibrated-xx
 output-directory: 031-dirty-channel-maps-calibrated-xx
 metadata: metadata
-transfer-matrix: 100-transfer-matrix
+transfer-matrix: 100-transfer-matrix-xx
 regularization: 100
 nside: 512
 mfs: false
